# rspack

./: Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: renovate.json5
.github/workflows/: bench-rust.yml  ci-diff.yml  ci-dylint.yaml  ci-lint.yaml  ci.yml  ecosystem-benchmark.yml  ecosystem-ci.yml  preview-commit.yml  release-canary.yml  release-debug.yml  reusable-build-build.yml  reusable-build-test.yml  reusable-release-crates.yml  reusable-release-npm.yml  reusable-rust-test.yml  size-limit.yml
crates/node_binding/: napi-binding.d.ts  package.json
crates/rspack_binding_api/: Cargo.toml
crates/rspack_binding_builder_testing/: package.json
crates/rspack_fs/: Cargo.toml
crates/rspack_hash/: Cargo.toml
crates/rspack_hash/src/: lib.rs
crates/rspack_hash/src/hashable/: containers.rs  external.rs  mod.rs  primitives.rs  rspack.rs
crates/rspack_hash/tests/: hash.rs
crates/rspack_hook/: Cargo.toml
crates/rspack_macros/: Cargo.toml
crates/rspack_napi/: Cargo.toml
crates/rspack_plugin_json/: Cargo.toml
crates/rspack_util/: Cargo.toml
crates/rspack_watcher/: Cargo.toml
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-arm64-musl/: package.json
npm/linux-riscv64-gnu/: package.json
npm/linux-riscv64-musl/: package.json
npm/linux-x64-gnu/: package.json
npm/linux-x64-musl/: package.json
npm/wasm32-wasi/: package.json
npm/win32-arm64-msvc/: package.json
npm/win32-ia32-msvc/: package.json
scripts/: package.json
website/: package.json
(+843 files in other folders)
